--- a/lab 2/index.html
+++ b/lab 2/index.html
@@ -11,7 +11,7 @@
     <Body>
         <div id="Container">
      <Header>
-    <img="Godzilla 3.jpeg Alt="Godzilla 3">
+    <img src="Godzilla3.jpeg" Alt="Godzilla 3">
     <h1>The King Of Monsters</h1>
 </Header>
 <hr>
@@ -27,7 +27,7 @@
     <p>Godzilla was a fictional charater created in the 1950's. He was just a lizard until the nuclar bomb was dropped on Hiroshima. Turning him into the monster everyone know's of today! </p>
 
 
-    <img="Godzilla 2.jpeg alt="Godzilla 2">
+    <img src="Godzilla2.jpeg" alt="Godzilla2">
 
 <p>Here we have a nice image of Godzilla in action, doing what he does best! This would include destroying Tokyo, and scaring all the people in the city.</p>
 </main>
