--- a/lab 2/about.html
+++ b/lab 2/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, intialize scale 1.0">
-        <title>Godzilla Unoffical Page</title>
+        <title>Unoffical Godzilla page</title>
         <link rel="stylesheet" href="css/normalize.CSS">
         <link rel="stylesheet" href="css/Style.CSS">
     </head>
