--- a/Final/Index.html
+++ b/Final/Index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
     <header>
         <h1></h1>
         
@@ -28,18 +28,19 @@
      <div id="lower_flex">
       <section>
      <h2>Welcome to Everything Else</h2>
-     <img src="skateboard2 .jpg" alt="skateboard2">
+     <img src="skateboard2.jpg" alt="skateboard2">
      <p>Everything Else is the online store for your skateboard needs. We have a collection of clothing, skateboards, and more!</p>
     </section>
     <aside>
      <h2>Everything Else isn't just skateboarding its Art</h2>
      <img src= "skateboard3.jpg" alt="skateboard3">
      <p> Everything Else may specialize in skateboarding products, but our mission is to bring art to the skating game. so please check us out you won't regert it.</p>
-    </div>
-  
     </aside>
-    <div>
-   
+    </div>
+ 
+</main>
+
+<div id="upper_flex">
       <div class="col">
         <h3>Everything Else Home Page</h3>
         <img src="logo2.jpg" alt="Designs">
@@ -70,8 +71,8 @@
       <p>Welcome to the Everything Else Merch Page! Here is were you'll learn about the manga and the anime. This will also include the creator of the show and the year it was made!</p>
       <a class="button" href="Merch.html">Merch</a>
       </div>
-    </main>
+    </div>  
     <footer>&copy; 2021 Everything Else Offical site</footer>
-    
+   </div> 
 </body>
 </html>
