--- a/Final/Media.html
+++ b/Final/Media.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <div id="container"></div>
+    <div id="container">
     <header>
         <h1>
           
@@ -33,18 +33,18 @@
 
         <h3>Skate Athem</h3>
         <p>Sum 41: In Too Deep</p>
-        <audio src="audio/In Too Deep.mp3" controls></audio> 
+        <audio src="audio/InTooDeep.mp3" controls></audio> 
         <p>Good Charlotte: Lifestyle of the Rich & Famous </p>
         <audio 
-        src="audio/Lifestyles of the Rich & Famous.mp3" controls></audio>
+        src="audio/LifestylesoftheRich&Famous.mp3" controls></audio>
 
         <h3>Skate Videos</h3>
         <video src="videos/SkateVideo1.mp4" controls></video>
         <video src="videos/SkateVideo2.mp4" controls></video> 
         </section>
-    <div>
-   
-      <div id="upper_flex">
+      </div>
+   </main>
+      <div id="lower_flex">
   <div class="col">
     <h3>Everything Else Home Page</h3>
     <img src="logo2.jpg" alt="Designs">
@@ -75,8 +75,8 @@
   <p>Welcome to the Everything Else Merch Page! Here is were you'll learn about the manga and the anime. This will also include the creator of the show and the year it was made!</p>
   <a class="button" href="Merch.html">Merch</a>
   </div>
-    </main>
+  </div>
     <footer>&copy; 2021 Everything Else Offical site</footer>
-    
+    </div>
 </body>
 </html>
