--- a/Final/about.html
+++ b/Final/about.html
@@ -9,7 +9,7 @@
     </head>
 
 <Body>
-    <div id="Container">
+    <div id="container">
 <Header>
 <h1></h1>
 </Header>
@@ -23,15 +23,15 @@
             <li><a href="about.html">About</a></li>
         </ul>
     </nav>
-<main>
-<h2>Everything Else About Me Page</h2>
+<main style="width: 93.5%;">
+<h2 style="color: #F7B229;">Everything Else About Me Page</h2>
 <img src="About.jpeg" Alt="about">
 <p>I'm a Graphic Designer from Chattanooga, Tennessee. Since I was little I've always been fascinated by Art. I've always like Artist such as Salvador Dali and T-shirt Designer Dan Mumford.<p>
 <p> I really enjoy hobbies such as gaming, art,skateboarding, and messing with technology.</p>
 <p>I hope to give people a new style that not only involes skating but art too! </p>
+</main>
 
 <div id="lower_flex">
-  </aside>
   <div>
  
     <div class="col">
@@ -65,12 +65,9 @@
       <a class="button" href="Merch.html">Merch</a>
       </div>
 
-</main>
-<footer>&copy;2021 Everything Else Offical site</footer>
-
-
-
-
     </div>
-</Body>
+  </div>
+    <footer>&copy; 2021 Everything Else Offical site</footer>
+    </div>
+</body>
 </html>
